<resources>
  <string name="contactsIconLabel">Contacts</string>
  <string name="dialerIconLabel">Telephony Service</string>
  <string name="emergencyDialerIconLabel">Emergency Dialer</string>
  <string name="phoneIconLabel">Phone</string>
  <string name="fdnListLabel">FDN list</string>
  <string name="sdnListLabel">SDN list</string>
  <string name="unknown">Unknown</string>
  <string name="private_num">Private number</string>
  <string name="payphone">Pay phone</string>
  <string name="onHold">On hold</string>
  <string name="ongoing">Current call</string>
  <string name="callFailed_userBusy">Line busy</string>
  <string name="callFailed_congestion">Network busy</string>
  <string name="callFailed_timedOut">No response, timed out</string>
  <string name="callFailed_server_unreachable">Server unreachable</string>
  <string name="callFailed_number_unreachable">Number unreachable</string>
  <string name="callFailed_invalid_credentials">Incorrect username or password</string>
  <string name="callFailed_out_of_network">Called from out of network</string>
  <string name="callFailed_server_error">Server error. Try again later.</string>
  <string name="callFailed_noSignal">No signal</string>
  <string name="callFailed_limitExceeded">ACM limit exceeded</string>
  <string name="callFailed_powerOff">Radio off</string>
  <string name="callFailed_simError">No SIM, or SIM error</string>
  <string name="callFailed_outOfService">Out of service area</string>
  <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
  <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
  <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
  <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
  <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
  <string name="callFailed_unobtainable_number">Invalid Number</string>
  <string name="call_lost">Call has been lost.</string>
  <string name="retry">Retry</string>
  <string name="mmiStarted">MMI code started</string>
  <string name="ussdRunning">USSD code running…</string>
  <string name="mmiCancelled">MMI code canceled</string>
  <string name="cancel">Cancel</string>
  <string name="ok">OK</string>
  <string name="wait_prompt_str">"Send the following tones?
"</string>
  <string name="pause_prompt_str">"Sending Tones
"</string>
  <string name="send_button">Send</string>
  <string name="pause_prompt_yes">Yes</string>
  <string name="pause_prompt_no">No</string>
  <string name="wild_prompt_str">Replace the wild character with</string>
  <string name="no_vm_number">Missing voicemail number</string>
  <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
  <string name="add_vm_number_str">Add number</string>
  <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking…</string>
  <string name="label_ndp">SIM network unlock PIN</string>
  <string name="sim_ndp_unlock_text">Unlock</string>
  <string name="sim_ndp_dismiss_text">Dismiss</string>
  <string name="requesting_unlock">Requesting network unlock…</string>
  <string name="unlock_failed">Network unlock request unsuccessful.</string>
  <string name="unlock_success">Network unlock successful.</string>
  <string name="imei">IMEI</string>
  <string name="meid">MEID</string>
  <string name="labelCDMAMore">CDMA call settings</string>
  <string name="apn_settings">Access Point Names</string>
  <string name="settings_label">Network settings</string>
  <string name="voicemail">Voicemail</string>
  <string name="voicemail_abbreviated">VM:</string>
  <string name="networks">Network operators</string>
  <string name="call_settings">Call settings</string>
  <string name="more_call_settings">More call settings</string>
  <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
  <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
  <string name="labelCallerId">Caller ID</string>
  <string name="sum_caller_id">Hide/show my number for outgoing calls (if network support)</string>
  <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
  <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
  <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
  <string name="labelCW">Call waiting</string>
  <string name="sum_call_waiting">During a call, notify me of incoming calls</string>
  <string name="call_forwarding_settings">Call forwarding settings</string>
  <string name="labelCF">Call forwarding</string>
  <string name="labelCFU">Always forward</string>
  <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
  <string name="sum_cfu_enabled">Forwarding all calls to {0}</string>
  <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
  <string name="sum_cfu_disabled">Disabled</string>
  <string name="labelCFB">Forward when busy</string>
  <string name="sum_cfb_enabled">Forwarding to {0}</string>
  <string name="sum_cfb_disabled">Disabled</string>
  <string name="labelCFNRy">Forward when unanswered</string>
  <string name="labelCFNRc">Forward when unreachable</string>
  <string name="disable_all_cf">Disable all call-forwarding</string>
  <string name="enable">Enable</string>
  <string name="mobile_networks">Mobile network settings</string>
  <string name="preferred_network_mode_cdma">CDMA</string>
  <string name="preferred_network_mode_gsm_umts">GSM/WCDMA</string>
  <string name="preferred_network_type_entries_3g_preferred">3G preferred</string>
  <string name="preferred_network_type_entries_auto">Automatic</string>
  <string name="preferred_network_type_entries_only_2g">Only 2G (power-saving)</string>
  <string name="preferred_network_type_entries_only_3g">Only 3G</string>
  <string name="data_enabled">Data enabled</string>
  <string name="data_enable_summary">Enable data access over Mobile network</string>
  <string name="roaming">Data roaming</string>
  <string name="roaming_enable">Connect to data services when roaming</string>
  <string name="roaming_disable">Connect to data services when roaming</string>
  <string name="throttle_data_usage">Data usage</string>
  <string name="fdn">Fixed Dialing Numbers</string>
  <string name="manage_fdn_list">FDN list</string>
  <string name="fdn_enabled">Fixed Dialing Numbers are enabled</string>
  <string name="fdn_disabled">Fixed Dialing Numbers are disabled</string>
  <string name="change_pin2">Change PIN2</string>
  <string name="sum_fdn_change_pin">Change PIN for FDN access</string>
  <string name="sum_fdn_manage_list">Manage phone number list</string>
  <string name="voice_privacy">Voice Privacy</string>
  <string name="voice_privacy_summary">Enable enhanced privacy mode</string>
  <string name="simContacts_emptyLoading">Reading from SIM card…</string>
  <string name="simContacts_title">SIM contacts</string>
  <string name="fake_phone_activity_phoneNumber_text">(650) 555-1234</string>
  <string name="fake_phone_activity_infoText_text">Incoming phone number</string>
  <string name="fake_phone_activity_placeCall_text">Fake Incoming Call</string>
  <string name="importAllSimEntries">Import all</string>
  <string name="other_settings">Other call settings</string>
  <string name="auto_ip_setting">Automatic IP settings</string>
  <string name="autoip">Auto IP dialing</string>
  <string name="autoip_sum">Add IP prefix to a foreign number. Enter current area code below.</string>
  <string name="ip_prefix">IP prefix</string>
  <string name="ip_prefix_sum">"Carrier's IP prefix: %s"</string>
  <string name="current_areacode">Current area code</string>
  <string name="current_areacode_sum">Area code of current location, or roaming area code if you are roaming. For example: 010</string>
  <string name="always_enable_mms">Always receive MMS</string>
  <string name="always_enable_mms_summary">Always receive MMS even when data is disabled</string>
  <string name="dialer_click_pref_title">Single click on call log</string>
  <string name="auto_dialpad_pref_title">Auto show dialpad</string>
  <string name="enable_proximity_title">Enable proximity sensor</string>
  <string name="enable_proximity_summary">Enable proximity sensor to disable screen display during calls</string>
  <string name="enforce_proximity_title">Enforce Proximity sensor</string>
  <string name="enforce_proximity_summary">Prevent misuse of phone when not being used</string>
  <string name="phone_call_pref_title">Phone calls</string>
  <string name="turnover_mute_title">Flip to silence</string>
  <string name="handon_ringer_title">Quiet ring on pickup</string>
  <string name="handon_ringer_summary">In vain when vibration enabled for incoming call</string>
  <string name="show_quick_contact_badge_title">Display photo</string>
  <string name="call_forwarding_number_hint">Enter the number to forward to</string>
  <string name="predefined_hangup_sms_title">Hangup message</string>
  <string name="predefined_hangup_sms_summary">Ignore call and send message</string>
  <string name="pref_dialer_list_title">Dialer list</string>
  <string name="pref_outgoing_call_title">Outgoing calls</string>
  <string name="pref_more_settings_title">Settings</string>
  <string name="auto_answer_setting_title">Auto answer settings</string>
  <string name="auto_answer_pref_title">Auto answer</string>
  <string name="auto_answer_pref_summary">Answer calls automatically</string>
  <string name="auto_answer_delay_title">Delay for auto answer</string>
  <string name="auto_answer_scenario_title">Scenario for auto answer</string>
  <string name="auto_redial_pref_title">Auto redial</string>
  <string name="auto_redial_pref_summary">Redial numbers automatically if line is busy</string>
  <string name="auto_record_call_title">Record automatically</string>
  <string name="auto_record_call_summary">Start recording while the call is connected, and save it to folder MIUI/sound_recorder/call_rec of SD card</string>
  <string name="call_recording_notification">Call recording notification</string>
  <string name="call_recording_notification_summary">Show notification in status bar when recording is completed</string>
  <string name="connect_disconnect_vibrate_title">Vibration</string>
  <string name="connect_disconnect_vibrate_summary">Vibrate when receiver answers/hangs up</string>
  <string name="prefered_network_type_title">Network type selection</string>
  <string name="answer_features_setting_title">Answer features</string>
  <string name="answer_features_setting_summary">Settings for flip to silence, proximity sensor and etc. when incoming call</string>
  <string name="edit_custom_location_title">Customize regional attribution, number attribution, wildcards # supported</string>
  <string name="custom_location_number_hint">Area code such as 010, group number such as 68#####</string>
  <string name="custom_location_location_hint">Name</string>
  <string name="number_type">Number type</string>
  <string name="number_type_tel">Landline</string>
  <string name="number_type_mob">Mobile phone</string>
  <string name="number_type_jituan">Group number</string>
  <string name="enable_telocation_title">Show attribution for number</string>
  <string name="pref_custom_location_title">Customize attribution</string>
  <string name="pref_custom_location_summary">Customize regional attribution and number attribution</string>
  <string name="dual_microphone_enable_title">Enable noise-cancelling</string>
  <string name="dual_microphone_enable_summary_on">Dual-microphone noise cancellation is enabled</string>
  <string name="dual_microphone_enable_summary_off">Dual-microphone noise cancellation is disabled</string>
</resources>