<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:phone="http://schemas.android.com/apk/res/com.android.phone" android:title="@string/mobile_networks">
  <PreferenceCategory>
    <CheckBoxPreference android:persistent="false" android:title="@string/data_enabled" android:key="button_data_enabled_key" android:summary="@string/data_enable_summary"/>
    <CheckBoxPreference android:persistent="false" android:title="@string/always_enable_mms" android:key="button_mms_enabled_key" android:summary="@string/always_enable_mms_summary"/>
    <CheckBoxPreference android:persistent="false" android:title="@string/roaming" android:key="button_roaming_key" android:summaryOn="@string/roaming_enable" android:summaryOff="@string/roaming_disable"/>
  </PreferenceCategory>
  <PreferenceScreen android:persistent="false" android:title="@string/throttle_data_usage" android:key="button_data_usage_key">
    <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.DataUsage"/>
  </PreferenceScreen>
  <PreferenceCategory>
    <PreferenceScreen android:persistent="false" android:title="@string/prefered_network_type_title" android:key="button_prefered_network_type_key">
      <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.PreferedNetworkTypeListPreference"/>
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/apn_settings" android:key="button_apn_key">
      <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.ApnSettings"/>
    </PreferenceScreen>
  </PreferenceCategory>
</PreferenceScreen>
