<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <CheckBoxPreference android:persistent="false" android:title="@string/fdn" android:key="button_fdn_enable_key" android:summaryOn="@string/fdn_enabled" android:summaryOff="@string/fdn_disabled"/>
  <PreferenceScreen android:persistent="false" android:title="@string/change_pin2" android:key="button_change_pin2_key" android:summary="@string/sum_fdn_change_pin"/>
  <PreferenceScreen android:persistent="false" android:title="@string/manage_fdn_list" android:key="button_fdn_list_key" android:summary="@string/sum_fdn_manage_list">
    <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.FdnList"/>
  </PreferenceScreen>
</PreferenceScreen>
