<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:phone="http://schemas.android.com/apk/res/com.android.phone" android:title="@string/auto_ip_setting">
  <PreferenceCategory>
    <CheckBoxPreference android:persistent="true" android:title="@string/autoip" android:key="button_autoip" android:summary="@string/autoip_sum" android:defaultValue="false" android:disableDependentsState="false"/>
    <EditTextPreference android:persistent="true" android:title="@string/ip_prefix" android:key="text_ip_prefix" android:summary="@string/ip_prefix_sum" android:dependency="button_autoip" android:inputType="phone"/>
    <EditTextPreference android:persistent="true" android:title="@string/current_areacode" android:key="text_current_areacode" android:summary="@string/current_areacode_sum" android:dependency="button_autoip" android:inputType="phone"/>
  </PreferenceCategory>
</PreferenceScreen>
