<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@*android:drawable/settings_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
  <ScrollView android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
      <TextView android:gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/edit_custom_location_title"/>
      <EditText android:textAppearance="@*android:style/TextAppearance.ListView.PrimaryItem" android:id="@id/custom_number" android:background="@*android:drawable/preference_first_item" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/custom_location_number_hint" android:singleLine="true" android:phoneNumber="true"/>
      <EditText android:textAppearance="@*android:style/TextAppearance.ListView.PrimaryItem" android:id="@id/custom_location" android:background="@*android:drawable/preference_last_item" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/custom_location_location_hint" android:singleLine="true"/>
      <TextView android:gravity="center_vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/number_type"/>
      <RadioGroup android:orientation="vertical" android:id="@id/type_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:id="@id/type_tel" android:background="@*android:drawable/preference_first_item" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/number_type_tel" style="@style/TextAppearance.RightRadioButton"/>
        <RadioButton android:id="@id/type_mob" android:background="@*android:drawable/preference_item" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/number_type_mob" style="@style/TextAppearance.RightRadioButton"/>
        <RadioButton android:id="@id/type_jituan" android:background="@*android:drawable/preference_last_item" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/number_type_jituan" style="@style/TextAppearance.RightRadioButton"/>
      </RadioGroup>
    </LinearLayout>
  </ScrollView>
  <LinearLayout android:id="@id/buttons" style="@*android:style/BottomButtonBar">
    <Button android:id="@id/btn_done" android:text="@string/ok" style="@*android:style/BottomButton.Left"/>
    <Button android:id="@id/btn_discard" android:text="@string/cancel" style="@*android:style/BottomButton.Right"/>
  </LinearLayout>
</LinearLayout>
