<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
  <TextView android:id="@id/infoText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fake_phone_activity_infoText_text"/>
  <EditText android:id="@id/phoneNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/fake_phone_activity_phoneNumber_text" android:scrollHorizontally="true" android:singleLine="true" android:capitalize="none" android:autoText="false"/>
  <Button android:id="@id/placeCall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fake_phone_activity_placeCall_text">
    <requestFocus/>
  </Button>
</LinearLayout>
